force-app/main/default/objects/MS_FSM_AR_Delete__e/MS_FSM_AR_Delete__e.object-meta.xml
<CustomObject>
    <description>Purpose of this Platform Event is to identify when an Assigned Resource is being Deleted and make applicable updates to a Service Appointment based on that deletion.</description>
    <label>AR Delete</label>
    <pluralLabel>AR Deletes</pluralLabel>
</CustomObject>