force-app/main/default/objects/MS_FSM_AR_Delete__e/fields/MS_FSM_Assigned_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Assigned_Resource_Id__c</fullName>
    <description>Purpose of this field is to store the applicable related Assigned Resource id</description>
    <label>Assigned Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>