force-app/main/default/objects/MS_FSM_AR_Delete__e/fields/MS_FSM_Delete_Boolean__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Delete_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose of this Field is to indicate that a Delete Boolean needs to be passed into a subflow for SA Updates</description>
    <label>Delete Boolean</label>
    <type>Checkbox</type>
</CustomField>