force-app/main/default/objects/MS_FSM_AR_Delete__e/fields/MS_FSM_Running_User_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Running_User_Id__c</fullName>
    <description>Purpose of this Field is to store the Running User Id to pass into a Subflow to make applicable Service Appointment Updates</description>
    <label>Running User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>