force-app/main/default/objects/MS_FSM_AR_Delete__e/fields/MS_FSM_Service_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Service_Appointment_Id__c</fullName>
    <description>Purpose of this field is to store the Service Appointment Id that may need to be updated based on an AR Delete</description>
    <label>Service Appointment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>