force-app/main/default/objects/MS_FSM_AR_Delete__e/fields/MS_FSM_Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Service_Resource_Id__c</fullName>
    <description>Purpose of this Field is to store the value of a Service Resource that may need to be updated on a related Service Appointment</description>
    <label>Service Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>